# VisionTansformer

./: .gitignore  README.md  pyproject.toml
src/vision_transformer/: cnn_block.py  train.py  transformer_block.py  visiontransofrmer.py
src/vision_transformer/dataset/: clean_name.py  dataset.py  download_data.py  stats.py
