[project]
authors = [{name = "RHOUMA", email = "hedi.rhouma@ird.fr"}]
dependencies = []
name = "Vision_Transformer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vision_transformer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.5,<3"
pytorch = ">=2.8.0,<3"
pillow = ">=12.0.0,<13"
torchvision = ">=0.24.0,<0.25"
tqdm = ">=4.67.1,<5"
